Fix: Centered the library items a bit more on mobile

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -2661,7 +2661,7 @@ div[data-role=controlgroup] a.ui-btn-active {
 }
 
 .layout-mobile .padded-right-withalphapicker {
-    padding-left: 3.5%;
+    padding-left: 4.5%;
     padding-right: 6.5%;
 }
 
